fix alignment issues on home page

--- a/client/src/pages/Home/style.css
+++ b/client/src/pages/Home/style.css
@@ -26,14 +26,14 @@
     background-image: url("/images/international-space-station-1176518_1920.jpg");
     background-size: cover;
     height: 100vh;
-    margin-top: -65px;          
+    width:100%;
+    margin-top: -65px;  
+    position:fixed;        
 }
 .text-container {
-    margin-top: 15%;
-    padding: 0 10px 10px 10px;
+    margin-top: 230px;
     text-align: center;
-    position: fixed;
-    line-height: 1.3;
+    /* line-height: 1.2; */
 }
 /* scrim added to darked background near text */
 .scrim {
@@ -41,13 +41,14 @@
   background-color: rgba(0, 0, 0, .2);
   box-shadow: 0 0 5rem rgba(0, 0, 0, .5);
 }
-.homeContent{
+/* .homeContent{
   margin: 50%;
-}
+} */
 .contactbtn{
   margin-top: 20px;
   /* background-color: #4CD463; */
   opacity: .95;
+  border-radius: 20px;
 
 }
 
